[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/main_menu/scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/common/assets/Dungeon Tileset.png" type="Texture" id=2]
[ext_resource path="res://ui/fonts/PrStart.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/main_menu/SplashScreen.tscn" type="PackedScene" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=5]
2/name = "Dungeon Tileset.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 48, 0, 144, 64 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Dungeon Tileset.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 128, 32, 32 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 16, 16 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "AT_Floor 01"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 80, 64, 48, 48 )
4/tile_mode = 1
4/autotile/bitmask_mode = 2
4/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27 ]
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 16, 16 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "Dungeon Tileset.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 48, 48 )
5/tile_mode = 2
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 16, 16 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0

[sub_resource type="DynamicFont" id=6]
size = 64
use_mipmaps = true
use_filter = true
extra_spacing_char = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 44
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=8]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 44, 42, 44 ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 230, 30 )

[sub_resource type="Animation" id=10]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 44, 42, 44 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 44, 42, 44 ]
}

[node name="main_menu" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 250, 200 )
scale = Vector2( 3, 3 )
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 20, 0, 1, 21, 0, 1, 22, 0, 1, 23, 0, 1, 24, 0, 1, 25, 0, 1, 26, 0, 1, 27, 0, 1, 28, 0, 1, 29, 0, 1, 30, 0, 1, 31, 0, 1, 32, 0, 1, 33, 0, 1, 34, 0, 1, 35, 0, 1, 36, 0, 1, 37, 0, 1, 38, 0, 1, 39, 0, 1, 40, 0, 1, 41, 0, 1, 42, 0, 1, 43, 0, 1, 44, 0, 1, 45, 0, 1, 46, 0, 1, 47, 0, 1, 48, 0, 1, 49, 0, 1, 50, 0, 1, 51, 0, 1, 52, 0, 1, 53, 0, 1, 54, 0, 1, 55, 0, 1, 56, 0, 1, 57, 0, 1, 58, 0, 1, 59, 0, 2, 65536, 0, 65536, 65537, 0, 0, 65539, 5, 1, 65540, 5, 1, 65541, 5, 1, 65542, 5, 1, 65543, 5, 1, 65544, 5, 1, 65545, 5, 1, 65546, 5, 1, 65547, 5, 1, 65548, 5, 1, 65549, 5, 1, 65550, 5, 1, 65551, 5, 1, 65552, 5, 1, 65553, 5, 1, 65554, 5, 1, 65555, 5, 1, 65556, 5, 1, 65557, 5, 1, 65558, 5, 1, 65559, 5, 1, 65560, 5, 1, 65561, 5, 1, 65562, 5, 1, 65563, 5, 2, 65564, 0, 0, 65565, 0, 65537, 65566, 0, 65537, 65567, 0, 65537, 65568, 0, 65537, 65569, 0, 65537, 65570, 0, 65537, 65571, 0, 65537, 65572, 0, 65537, 65573, 0, 65537, 65574, 0, 65537, 65575, 0, 65537, 65576, 0, 65537, 65577, 0, 65537, 65578, 0, 65537, 65579, 0, 65537, 65580, 0, 65537, 65581, 0, 65537, 65582, 0, 65537, 65583, 0, 65537, 65584, 0, 65537, 65585, 0, 65537, 65586, 0, 65537, 65587, 0, 65537, 65588, 0, 65537, 65589, 0, 65537, 65590, 0, 65537, 65591, 0, 65537, 65592, 0, 65537, 65593, 0, 65537, 65594, 0, 65537, 65595, 0, 65538, 131072, 0, 65536, 131073, 0, 0, 131074, 5, 65536, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 1, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 1, 131083, 2, 2, 131084, 2, 1, 131085, 2, 1, 131086, 2, 1, 131087, 2, 1, 131088, 2, 0, 131089, 2, 1, 131090, 2, 1, 131091, 2, 1, 131092, 2, 2, 131093, 2, 1, 131094, 2, 1, 131095, 2, 0, 131096, 2, 1, 131097, 2, 1, 131098, 2, 1, 131099, 5, 65538, 131100, 0, 0, 131101, 0, 65537, 131102, 0, 65537, 131103, 0, 65537, 131104, 0, 65537, 131105, 0, 65537, 131106, 0, 65537, 131107, 0, 65537, 131108, 0, 65537, 131109, 0, 65537, 131110, 0, 65537, 131111, 0, 65537, 131112, 0, 65537, 131113, 0, 65537, 131114, 0, 65537, 131115, 0, 65537, 131116, 0, 65537, 131117, 0, 65537, 131118, 0, 65537, 131119, 0, 65537, 131120, 0, 65537, 131121, 0, 65537, 131122, 0, 65537, 131123, 0, 65537, 131124, 0, 65537, 131125, 0, 65537, 131126, 0, 65537, 131127, 0, 65537, 131128, 0, 65537, 131129, 0, 65537, 131130, 0, 65537, 131131, 0, 65538, 196608, 0, 65536, 196609, 0, 0, 196610, 5, 65536, 196611, 4, 0, 196612, 4, 1, 196613, 4, 1, 196614, 4, 1, 196615, 4, 1, 196616, 4, 1, 196617, 4, 1, 196618, 4, 1, 196619, 4, 1, 196620, 4, 1, 196621, 4, 1, 196622, 4, 1, 196623, 4, 1, 196624, 4, 1, 196625, 4, 1, 196626, 4, 1, 196627, 4, 1, 196628, 4, 1, 196629, 4, 1, 196630, 4, 1, 196631, 4, 1, 196632, 4, 1, 196633, 4, 1, 196634, 4, 2, 196635, 5, 65538, 196636, 0, 0, 196637, 0, 65537, 196638, 0, 65537, 196639, 0, 65537, 196640, 0, 65537, 196641, 0, 65537, 196642, 0, 65537, 196643, 0, 65537, 196644, 0, 65537, 196645, 0, 65537, 196646, 0, 65537, 196647, 0, 65537, 196648, 0, 65537, 196649, 0, 65537, 196650, 0, 65537, 196651, 0, 65537, 196652, 0, 65537, 196653, 0, 65537, 196654, 0, 65537, 196655, 0, 65537, 196656, 0, 65537, 196657, 0, 65537, 196658, 0, 65537, 196659, 0, 65537, 196660, 0, 65537, 196661, 0, 65537, 196662, 0, 65537, 196663, 0, 65537, 196664, 0, 65537, 196665, 0, 65537, 196666, 0, 65537, 196667, 0, 65538, 262144, 0, 65536, 262145, 0, 0, 262146, 5, 65536, 262147, 4, 65536, 262148, 4, 65537, 262149, 4, 65537, 262150, 4, 65537, 262151, 4, 65537, 262152, 4, 65537, 262153, 4, 65537, 262154, 4, 65537, 262155, 4, 65537, 262156, 4, 65537, 262157, 4, 65537, 262158, 4, 65537, 262159, 4, 65537, 262160, 4, 65537, 262161, 4, 65537, 262162, 4, 65537, 262163, 4, 65537, 262164, 4, 65537, 262165, 4, 65537, 262166, 4, 65537, 262167, 4, 65537, 262168, 4, 65537, 262169, 4, 65537, 262170, 4, 65538, 262171, 5, 65538, 262172, 0, 0, 262173, 0, 65537, 262174, 0, 65537, 262175, 0, 65537, 262176, 0, 65537, 262177, 0, 65537, 262178, 0, 65537, 262179, 0, 65537, 262180, 0, 65537, 262181, 0, 65537, 262182, 0, 65537, 262183, 0, 65537, 262184, 0, 65537, 262185, 0, 65537, 262186, 0, 65537, 262187, 0, 65537, 262188, 0, 65537, 262189, 0, 65537, 262190, 0, 65537, 262191, 0, 65537, 262192, 0, 65537, 262193, 0, 65537, 262194, 0, 65537, 262195, 0, 65537, 262196, 0, 65537, 262197, 0, 65537, 262198, 0, 65537, 262199, 0, 65537, 262200, 0, 65537, 262201, 0, 65537, 262202, 0, 65537, 262203, 0, 65538, 327680, 0, 65536, 327681, 0, 0, 327682, 5, 65536, 327683, 4, 65536, 327684, 4, 65537, 327685, 4, 65537, 327686, 4, 65537, 327687, 4, 65537, 327688, 4, 65537, 327689, 4, 65537, 327690, 4, 65537, 327691, 4, 65537, 327692, 4, 65537, 327693, 4, 65537, 327694, 4, 65537, 327695, 4, 65537, 327696, 4, 65537, 327697, 4, 65537, 327698, 4, 65537, 327699, 4, 65537, 327700, 4, 65537, 327701, 4, 65537, 327702, 4, 65537, 327703, 4, 65537, 327704, 4, 65537, 327705, 4, 65537, 327706, 4, 65538, 327707, 5, 65538, 327733, 0, 65537, 327734, 0, 65537, 327735, 0, 65537, 327736, 0, 65537, 327737, 0, 65537, 327738, 0, 65537, 327739, 0, 65538, 393216, 0, 65536, 393217, 0, 0, 393218, 5, 65536, 393219, 4, 65536, 393220, 4, 65537, 393221, 4, 65537, 393222, 4, 65537, 393223, 4, 65537, 393224, 4, 65537, 393225, 4, 65537, 393226, 4, 65537, 393227, 4, 65537, 393228, 4, 65537, 393229, 4, 65537, 393230, 4, 65537, 393231, 4, 65537, 393232, 4, 65537, 393233, 4, 65537, 393234, 4, 65537, 393235, 4, 65537, 393236, 4, 65537, 393237, 4, 65537, 393238, 4, 65537, 393239, 4, 65537, 393240, 4, 65537, 393241, 4, 65537, 393242, 4, 65538, 393243, 5, 65538, 393269, 0, 65537, 393270, 0, 65537, 393271, 0, 65537, 393272, 0, 65537, 393273, 0, 65537, 393274, 0, 65537, 393275, 0, 65538, 458752, 0, 65536, 458753, 0, 0, 458754, 5, 65536, 458755, 4, 65536, 458756, 4, 65537, 458757, 4, 65537, 458758, 4, 65537, 458759, 4, 65537, 458760, 4, 65537, 458761, 4, 65537, 458762, 4, 65537, 458763, 4, 65537, 458764, 4, 65537, 458765, 4, 65537, 458766, 4, 65537, 458767, 4, 65537, 458768, 4, 65537, 458769, 4, 65537, 458770, 4, 65537, 458771, 4, 65537, 458772, 4, 65537, 458773, 4, 65537, 458774, 4, 65537, 458775, 4, 65537, 458776, 4, 65537, 458777, 4, 65537, 458778, 4, 65538, 458779, 5, 65538, 458805, 0, 65537, 458806, 0, 65537, 458807, 0, 65537, 458808, 0, 65537, 458809, 0, 65537, 458810, 0, 65537, 458811, 0, 65538, 524288, 0, 65536, 524289, 0, 0, 524290, 5, 65536, 524291, 4, 65536, 524292, 4, 65537, 524293, 4, 65537, 524294, 4, 65537, 524295, 4, 65537, 524296, 4, 65537, 524297, 4, 65537, 524298, 4, 65537, 524299, 4, 65537, 524300, 4, 65537, 524301, 4, 65537, 524302, 4, 65537, 524303, 4, 65537, 524304, 4, 65537, 524305, 4, 65537, 524306, 4, 65537, 524307, 4, 65537, 524308, 4, 65537, 524309, 4, 65537, 524310, 4, 65537, 524311, 4, 65537, 524312, 4, 65537, 524313, 4, 65537, 524314, 4, 65538, 524315, 5, 65538, 524331, 0, 65537, 524332, 0, 65537, 524341, 0, 65537, 524342, 0, 65537, 524343, 0, 65537, 524344, 0, 65537, 524345, 0, 65537, 524346, 0, 65537, 524347, 0, 65538, 589824, 0, 65536, 589825, 0, 0, 589826, 5, 65536, 589827, 4, 65536, 589828, 4, 65537, 589829, 4, 65537, 589830, 4, 65537, 589831, 4, 65537, 589832, 4, 65537, 589833, 4, 65537, 589834, 4, 65537, 589835, 4, 65537, 589836, 4, 65537, 589837, 4, 65537, 589838, 4, 65537, 589839, 4, 65537, 589840, 4, 65537, 589841, 4, 65537, 589842, 4, 65537, 589843, 4, 65537, 589844, 4, 65537, 589845, 4, 65537, 589846, 4, 65537, 589847, 4, 65537, 589848, 4, 65537, 589849, 4, 65537, 589850, 4, 65538, 589851, 5, 65538, 589864, 0, 65537, 589865, 0, 65537, 589866, 0, 65537, 589877, 0, 65537, 589878, 0, 65537, 589879, 0, 65537, 589880, 0, 65537, 589881, 0, 65537, 589882, 0, 65537, 589883, 0, 65538, 655360, 0, 65536, 655361, 0, 0, 655362, 5, 65536, 655363, 4, 65536, 655364, 4, 65537, 655365, 4, 65537, 655366, 4, 65537, 655367, 4, 65537, 655368, 4, 65537, 655369, 4, 65537, 655370, 4, 65537, 655371, 4, 65537, 655372, 4, 65537, 655373, 4, 65537, 655374, 4, 65537, 655375, 4, 65537, 655376, 4, 65537, 655377, 4, 65537, 655378, 4, 65537, 655379, 4, 65537, 655380, 4, 65537, 655381, 4, 65537, 655382, 4, 65537, 655383, 4, 65537, 655384, 4, 65537, 655385, 4, 65537, 655386, 4, 65538, 655387, 5, 65538, 655397, 0, 65537, 655398, 0, 65537, 655399, 0, 65537, 655413, 0, 65537, 655414, 0, 65537, 655415, 0, 65537, 655416, 0, 65537, 655417, 0, 65537, 655418, 0, 65537, 655419, 0, 65538, 720896, 0, 65536, 720897, 0, 0, 720898, 5, 65536, 720899, 4, 65536, 720900, 4, 65537, 720901, 4, 65537, 720902, 4, 65537, 720903, 4, 65537, 720904, 4, 65537, 720905, 4, 65537, 720906, 4, 65537, 720907, 4, 65537, 720908, 4, 65537, 720909, 4, 65537, 720910, 4, 65537, 720911, 4, 65537, 720912, 4, 65537, 720913, 4, 65537, 720914, 4, 65537, 720915, 4, 65537, 720916, 4, 65537, 720917, 4, 65537, 720918, 4, 65537, 720919, 4, 65537, 720920, 4, 65537, 720921, 4, 65537, 720922, 4, 65538, 720923, 5, 65538, 720929, 0, 65537, 720930, 0, 65537, 720931, 0, 65537, 720932, 0, 65537, 720949, 0, 65537, 720950, 0, 65537, 720951, 0, 65537, 720952, 0, 65537, 720953, 0, 65537, 720954, 0, 65537, 720955, 0, 65538, 786432, 0, 65536, 786433, 0, 0, 786434, 5, 65536, 786435, 4, 65536, 786436, 4, 65537, 786437, 4, 65537, 786438, 4, 65537, 786439, 4, 65537, 786440, 4, 65537, 786441, 4, 65537, 786442, 4, 65537, 786443, 4, 65537, 786444, 4, 65537, 786445, 4, 65537, 786446, 4, 65537, 786447, 4, 65537, 786448, 4, 65537, 786449, 4, 65537, 786450, 4, 65537, 786451, 4, 65537, 786452, 4, 65537, 786453, 4, 65537, 786454, 4, 65537, 786455, 4, 65537, 786456, 4, 65537, 786457, 4, 65537, 786458, 4, 65538, 786459, 5, 65538, 786462, 0, 65537, 786463, 0, 65537, 786464, 0, 65537, 786485, 0, 65537, 786486, 0, 65537, 786487, 0, 65537, 786488, 0, 65537, 786489, 0, 65537, 786490, 0, 65537, 786491, 0, 65538, 851968, 0, 65536, 851969, 0, 0, 851970, 5, 65536, 851971, 4, 131072, 851972, 4, 131073, 851973, 4, 131073, 851974, 4, 131073, 851975, 4, 131073, 851976, 4, 131073, 851977, 4, 131073, 851978, 4, 131073, 851979, 4, 131073, 851980, 4, 131073, 851981, 4, 131073, 851982, 4, 131073, 851983, 4, 131073, 851984, 4, 131073, 851985, 4, 131073, 851986, 4, 131073, 851987, 4, 131073, 851988, 4, 131073, 851989, 4, 131073, 851990, 4, 131073, 851991, 4, 131073, 851992, 4, 131073, 851993, 4, 131073, 851994, 4, 131074, 851995, 5, 65538, 851996, 0, 0, 851997, 0, 65537, 852021, 0, 65537, 852022, 0, 65537, 852023, 0, 65537, 852024, 0, 65537, 852025, 0, 65537, 852026, 0, 65537, 852027, 0, 65538, 917504, 0, 65536, 917505, 0, 0, 917506, 5, 131072, 917507, 5, 131073, 917508, 5, 131073, 917509, 5, 131073, 917510, 5, 131073, 917511, 5, 131073, 917512, 5, 131073, 917513, 5, 131073, 917514, 5, 131073, 917515, 5, 131073, 917516, 5, 131073, 917517, 5, 131073, 917518, 5, 131073, 917519, 5, 131073, 917520, 5, 131073, 917521, 5, 131073, 917522, 5, 131073, 917523, 5, 131073, 917524, 5, 131073, 917525, 5, 131073, 917526, 5, 131073, 917527, 5, 131073, 917528, 5, 131073, 917529, 5, 131073, 917530, 5, 131073, 917531, 5, 131074, 917557, 0, 65537, 917558, 0, 65537, 917559, 0, 65537, 917560, 0, 65537, 917561, 0, 65537, 917562, 0, 65537, 917563, 0, 65538, 983040, 0, 65536, 983041, 0, 0, 983042, 0, 0, 983062, 0, 0, 983063, 0, 0, 983093, 0, 65537, 983094, 0, 65537, 983095, 0, 65537, 983096, 0, 65537, 983097, 0, 65537, 983098, 0, 65537, 983099, 0, 65538, 1048576, 0, 65536, 1048577, 0, 65537, 1048578, 0, 65537, 1048593, 0, 65537, 1048594, 0, 65537, 1048595, 0, 65537, 1048596, 0, 0, 1048629, 0, 65537, 1048630, 0, 65537, 1048631, 0, 65537, 1048632, 0, 65537, 1048633, 0, 65537, 1048634, 0, 65537, 1048635, 0, 65538, 1114112, 0, 65536, 1114113, 0, 65537, 1114114, 0, 65537, 1114126, 0, 65537, 1114127, 0, 65537, 1114128, 0, 65537, 1114165, 0, 65537, 1114166, 0, 65537, 1114167, 0, 65537, 1114168, 0, 65537, 1114169, 0, 65537, 1114170, 0, 65537, 1114171, 0, 65538, 1179648, 0, 65536, 1179649, 0, 65537, 1179650, 0, 65537, 1179659, 0, 65537, 1179660, 0, 65537, 1179661, 0, 65537, 1179701, 0, 65537, 1179702, 0, 65537, 1179703, 0, 65537, 1179704, 0, 65537, 1179705, 0, 65537, 1179706, 0, 65537, 1179707, 0, 65538, 1245184, 0, 65536, 1245185, 0, 65537, 1245186, 0, 65537, 1245193, 0, 65537, 1245194, 0, 65537, 1245237, 0, 65537, 1245238, 0, 65537, 1245239, 0, 65537, 1245240, 0, 65537, 1245241, 0, 65537, 1245242, 0, 65537, 1245243, 0, 65538, 1310720, 0, 65536, 1310721, 0, 65537, 1310722, 0, 65537, 1310773, 0, 65537, 1310774, 0, 65537, 1310775, 0, 65537, 1310776, 0, 65537, 1310777, 0, 65537, 1310778, 0, 65537, 1310779, 0, 65538, 1376256, 0, 65536, 1376257, 0, 65537, 1376258, 0, 65537, 1376309, 0, 65537, 1376310, 0, 65537, 1376311, 0, 65537, 1376312, 0, 65537, 1376313, 0, 65537, 1376314, 0, 65537, 1376315, 0, 65538, 1441792, 0, 65536, 1441793, 0, 65537, 1441794, 0, 65537, 1441845, 0, 65537, 1441846, 0, 65537, 1441847, 0, 65537, 1441848, 0, 65537, 1441849, 0, 65537, 1441850, 0, 65537, 1441851, 0, 65538, 1507328, 0, 65536, 1507329, 0, 65537, 1507330, 0, 65537, 1507381, 0, 65537, 1507382, 0, 65537, 1507383, 0, 65537, 1507384, 0, 65537, 1507385, 0, 65537, 1507386, 0, 65537, 1507387, 0, 65538, 1572864, 0, 65536, 1572865, 0, 65537, 1572866, 0, 65537, 1572917, 0, 65537, 1572918, 0, 65537, 1572919, 0, 65537, 1572920, 0, 65537, 1572921, 0, 65537, 1572922, 0, 65537, 1572923, 0, 65538, 1638400, 0, 65536, 1638401, 0, 65537, 1638402, 0, 65537, 1638453, 0, 65537, 1638454, 0, 65537, 1638455, 0, 65537, 1638456, 0, 65537, 1638457, 0, 65537, 1638458, 0, 65537, 1638459, 0, 65538, 1703936, 0, 65536, 1703937, 0, 65537, 1703938, 0, 65537, 1703989, 0, 65537, 1703990, 0, 65537, 1703991, 0, 65537, 1703992, 0, 65537, 1703993, 0, 65537, 1703994, 0, 65537, 1703995, 0, 65538, 1769472, 0, 65536, 1769473, 0, 65537, 1769474, 0, 65537, 1769525, 0, 65537, 1769526, 0, 65537, 1769527, 0, 65537, 1769528, 0, 65537, 1769529, 0, 65537, 1769530, 0, 65537, 1769531, 0, 65538, 1835008, 0, 65536, 1835009, 0, 65537, 1835010, 0, 65537, 1835061, 0, 65537, 1835062, 0, 65537, 1835063, 0, 65537, 1835064, 0, 65537, 1835065, 0, 65537, 1835066, 0, 65537, 1835067, 0, 65538, 1900544, 0, 65536, 1900545, 0, 65537, 1900546, 0, 65537, 1900597, 0, 65537, 1900598, 0, 65537, 1900599, 0, 65537, 1900600, 0, 65537, 1900601, 0, 65537, 1900602, 0, 65537, 1900603, 0, 65538, 1966080, 0, 65536, 1966081, 0, 65537, 1966082, 0, 65537, 1966133, 0, 65537, 1966134, 0, 65537, 1966135, 0, 65537, 1966136, 0, 65537, 1966137, 0, 65537, 1966138, 0, 65537, 1966139, 0, 65538, 2031616, 0, 65536, 2031617, 0, 65537, 2031618, 0, 65537, 2031619, 0, 65537, 2031620, 0, 65537, 2031621, 0, 65537, 2031622, 0, 65537, 2031623, 0, 65537, 2031624, 0, 65537, 2031625, 0, 65537, 2031626, 0, 65537, 2031627, 0, 65537, 2031628, 0, 65537, 2031629, 0, 65537, 2031630, 0, 65537, 2031631, 0, 65537, 2031632, 0, 65537, 2031633, 0, 65537, 2031634, 0, 65537, 2031635, 0, 65537, 2031636, 0, 65537, 2031637, 0, 65537, 2031638, 0, 65537, 2031639, 0, 65537, 2031640, 0, 65537, 2031641, 0, 65537, 2031642, 0, 65537, 2031643, 0, 65537, 2031644, 0, 65537, 2031645, 0, 65537, 2031646, 0, 65537, 2031647, 0, 65537, 2031648, 0, 65537, 2031649, 0, 65537, 2031650, 0, 65537, 2031651, 0, 65537, 2031652, 0, 65537, 2031653, 0, 65537, 2031654, 0, 65537, 2031655, 0, 65537, 2031656, 0, 65537, 2031657, 0, 65537, 2031658, 0, 65537, 2031659, 0, 65537, 2031660, 0, 65537, 2031661, 0, 65537, 2031662, 0, 65537, 2031663, 0, 65537, 2031664, 0, 65537, 2031665, 0, 65537, 2031666, 0, 65537, 2031667, 0, 65537, 2031668, 0, 65537, 2031669, 0, 65537, 2031670, 0, 65537, 2031671, 0, 65537, 2031672, 0, 65537, 2031673, 0, 65537, 2031674, 0, 65537, 2031675, 0, 65538, 2097152, 0, 65536, 2097153, 0, 65537, 2097154, 0, 65537, 2097155, 0, 65537, 2097156, 0, 65537, 2097157, 0, 65537, 2097158, 0, 65537, 2097159, 0, 65537, 2097160, 0, 65537, 2097161, 0, 65537, 2097162, 0, 65537, 2097163, 0, 65537, 2097164, 0, 65537, 2097165, 0, 65537, 2097166, 0, 65537, 2097167, 0, 65537, 2097168, 0, 65537, 2097169, 0, 65537, 2097170, 0, 65537, 2097171, 0, 65537, 2097172, 0, 65537, 2097173, 0, 65537, 2097174, 0, 65537, 2097175, 0, 65537, 2097176, 0, 65537, 2097177, 0, 65537, 2097178, 0, 65537, 2097179, 0, 65537, 2097180, 0, 65537, 2097181, 0, 65537, 2097182, 0, 65537, 2097183, 0, 65537, 2097184, 0, 65537, 2097185, 0, 65537, 2097186, 0, 65537, 2097187, 0, 65537, 2097188, 0, 65537, 2097189, 0, 65537, 2097190, 0, 65537, 2097191, 0, 65537, 2097192, 0, 65537, 2097193, 0, 65537, 2097194, 0, 65537, 2097195, 0, 65537, 2097196, 0, 65537, 2097197, 0, 65537, 2097198, 0, 65537, 2097199, 0, 65537, 2097200, 0, 65537, 2097201, 0, 65537, 2097202, 0, 65537, 2097203, 0, 65537, 2097204, 0, 65537, 2097205, 0, 65537, 2097206, 0, 65537, 2097207, 0, 65537, 2097208, 0, 65537, 2097209, 0, 65537, 2097210, 0, 65537, 2097211, 0, 65538, 2162688, 0, 131072, 2162689, 0, 131073, 2162690, 0, 131073, 2162691, 0, 131073, 2162692, 0, 131073, 2162693, 0, 131073, 2162694, 0, 131073, 2162695, 0, 131073, 2162696, 0, 131073, 2162697, 0, 131073, 2162698, 0, 131073, 2162699, 0, 131073, 2162700, 0, 131073, 2162701, 0, 131073, 2162702, 0, 131073, 2162703, 0, 131073, 2162704, 0, 131073, 2162705, 0, 131073, 2162706, 0, 131073, 2162707, 0, 131073, 2162708, 0, 131073, 2162709, 0, 131073, 2162710, 0, 131073, 2162711, 0, 131073, 2162712, 0, 131073, 2162713, 0, 131073, 2162714, 0, 131073, 2162715, 0, 131073, 2162716, 0, 131073, 2162717, 0, 131073, 2162718, 0, 131073, 2162719, 0, 131073, 2162720, 0, 131073, 2162721, 0, 131073, 2162722, 0, 131073, 2162723, 0, 131073, 2162724, 0, 131073, 2162725, 0, 131073, 2162726, 0, 131073, 2162727, 0, 131073, 2162728, 0, 131073, 2162729, 0, 131073, 2162730, 0, 131073, 2162731, 0, 131073, 2162732, 0, 131073, 2162733, 0, 131073, 2162734, 0, 131073, 2162735, 0, 131073, 2162736, 0, 131073, 2162737, 0, 131073, 2162738, 0, 131073, 2162739, 0, 131073, 2162740, 0, 131073, 2162741, 0, 131073, 2162742, 0, 131073, 2162743, 0, 131073, 2162744, 0, 131073, 2162745, 0, 131073, 2162746, 0, 131073, 2162747, 0, 131074 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true

[node name="text_game_title" type="Label" parent="."]
margin_left = 311.0
margin_top = 177.0
margin_right = 1623.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 6 )
text = "Insert Title Here"
align = 1
uppercase = true

[node name="SplashScreen" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 1404, 572 )
scale = Vector2( 2.40909, 2.35227 )

[node name="button_start" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( 760, 420 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="text_start_game" type="Label" parent="button_start"]
margin_left = -20.0
margin_right = 420.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 7 )
text = "Start Game"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="button_start/text_start_game"]
autoplay = "idle"
anims/idle = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="button_start"]
position = Vector2( 200, 20 )
shape = SubResource( 9 )

[node name="button_exit" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( 760, 640 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="text_exit" type="Label" parent="button_exit"]
margin_left = -20.0
margin_right = 420.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 7 )
text = "Exit"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="button_exit/text_exit"]
autoplay = "idle"
anims/idle = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="button_exit"]
position = Vector2( 200, 20 )
shape = SubResource( 9 )

[node name="button_options" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( 760, 530 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="text_exit" type="Label" parent="button_options"]
editor/display_folded = true
margin_left = -20.0
margin_right = 420.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 7 )
text = "Options"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="button_options/text_exit"]
autoplay = "idle"
anims/idle = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="button_options"]
position = Vector2( 200, 20 )
shape = SubResource( 9 )
[connection signal="input_event" from="button_start" to="." method="_on_button_start_input_event"]
[connection signal="input_event" from="button_exit" to="." method="_on_button_exit_input_event"]
[connection signal="input_event" from="button_options" to="." method="_on_button_options_input_event"]
